objects/Q4__Qvidian_Playbook_Instance__c.object
<CustomObject>
    <fields>
        <fullName>Q4__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Qvidian Playbooks</relationshipLabel>
        <relationshipName>Q4_Account_Playbooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q4__Current_Playbook_Stage__c</fullName>
        <label>Current Playbook Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Completed_Play_Date__c</fullName>
        <label>Last Completed Play Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Completed_Play_Name__c</fullName>
        <label>Last Completed Play</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Completed_Required_Play_Date__c</fullName>
        <label>Last Completed Required Play Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Completed_Required_Play_Name__c</fullName>
        <label>Last Completed Required Play</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Modified_Datetime_Manager__c</fullName>
        <description>The timestamp of the last change made to this playbook as a result of the actions by a playbook manager. These changes are usually the result of the manager publishing changes to the playbook template.</description>
        <label>Last Modified Datetime (Manager)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Modified_Datetime_Playbook_User__c</fullName>
        <description>The timestamp of the last change made to this playbook as a result of the actions by a playbook end user.</description>
        <label>Last Modified Datetime (Playbook User)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Modified_Datetime_System__c</fullName>
        <description>The timestamp of the last change made to this playbook as a result of the actions by a system process. These changes usually occur when system processes recalculate the status of the playbook behind the scenes.</description>
        <label>Last Modified Datetime (System)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Modified_Datetime__c</fullName>
        <description>The timestamp of the last modification to the given playbook record - no matter how that change was made.</description>
        <label>Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Modified_User_Manager__c</fullName>
        <description>The id of the last playbook manager whose actions resulted in a change to this playbook. These changes are usually the result of the manager publishing changes to a playbook template.</description>
        <label>Last Modified User (Manager)</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Modified_User_Playbook_User__c</fullName>
        <description>The id of the last playbook end user user whose actions resulted in a change to this playbook.</description>
        <label>Last Modified User (Playbook User)</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Modified_User_System__c</fullName>
        <description>The id of the last system user whose actions resulted in a change to this playbook.  These changes usually occur when system processes recalculate the status of the playbook behind the scenes.</description>
        <label>Last Modified User (System)</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Last_Modified_User__c</fullName>
        <description>The id of the user whose actions resulted in a change to this playbook - no matter how that change was made.</description>
        <label>Last Modified User</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Qvidian Playbooks</relationshipLabel>
        <relationshipName>Q4_Lead_Playbooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q4__Next_Play_Name__c</fullName>
        <label>Next Play</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Next_Required_Play_Name__c</fullName>
        <label>Next Required Play</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Qvidian Playbooks</relationshipLabel>
        <relationshipName>Q4_Opportunity_Playbooks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q4__Percent_Complete__c</fullName>
        <description>The percentage of required activites that have been completed.</description>
        <label>Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4__Playbook_Age_Days__c</fullName>
        <formula>IF ( ISNULL(Q4__Playbook_Close_Date__c ) , TODAY() , DATEVALUE(Q4__Playbook_Close_Date__c )) - 
DATEVALUE(Q4__Playbook_Create_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Playbook Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4__Playbook_Close_Date__c</fullName>
        <description>The date the the playbook was closed.</description>
        <label>Playbook_Close_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q4__Playbook_Create_Date__c</fullName>
        <description>The date and time on which the playbook was created.</description>
        <label>Playbook_Create_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Q4__Playbook_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Playbook_Id__c</fullName>
        <description>Qvidian&apos;s id for theplaybook</description>
        <externalId>true</externalId>
        <label>Master Playbook Qvidian Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Playbook_Instance_Id__c</fullName>
        <description>Id of the playbook instance in the Qvidian system</description>
        <externalId>true</externalId>
        <label>Playbook Qvidian Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Playbook</label>
        <referenceTo>Q4__Qvidian_Playbook__c</referenceTo>
        <relationshipLabel>Qvidian Playbooks</relationshipLabel>
        <relationshipName>R00N60000001eKDPEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q4__Recommended_Stage_Name__c</fullName>
        <label>Recommended Playbook Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Required_Percent_Complete__c</fullName>
        <label>Required Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4__StageHealth__c</fullName>
        <label>Stage Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overstated</fullName>
                </value>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>Understated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Qvidian Playbook</label>
    <nameField>
        <label>Playbook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qvidian Playbooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>